# etp

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  info.md  install-local.sh
app/: .dockerignore  .ruff.toml  Dockerfile  cron  entrypoint.sh  main.py  pyproject.toml  requirements.txt  supervisord.conf
app/crawlers/: base.py  items.py  middlewares.py  pipelines.py  settings.py
app/crawlers/crawler_akosta/: scrapy.cfg
app/crawlers/crawler_altimeta/: scrapy.cfg
app/crawlers/crawler_b2b_center/: scrapy.cfg
app/crawlers/crawler_bankrot_cdtrf/: scrapy.cfg
app/crawlers/crawler_ei/: scrapy.cfg
app/crawlers/crawler_electro_torgi/: scrapy.cfg
app/crawlers/crawler_ets24_arrested/: scrapy.cfg
app/crawlers/crawler_eurtp/: scrapy.cfg
app/crawlers/crawler_fabrikant/: scrapy.cfg
app/crawlers/crawler_heveya/: scrapy.cfg
app/crawlers/crawler_itender/: scrapy.cfg
app/crawlers/crawler_kartoteka/: scrapy.cfg
app/crawlers/crawler_lot_online_catalog/: scrapy.cfg
app/crawlers/crawler_lot_online_old/: scrapy.cfg
app/crawlers/crawler_lot_online_tender/: scrapy.cfg
app/crawlers/crawler_lot_online_zalog/: scrapy.cfg
app/crawlers/crawler_mets/: scrapy.cfg
app/crawlers/crawler_moi_tender/: scrapy.cfg
app/data/: addresses.csv  cities.csv  index.json  lot_classifiers.csv  regions_with_oktmo.csv  trading_floors.csv  user-agent.txt
app/db/: db_helper.py
app/utils/: __init__.py  archive.py  config.py  contacts.py  datetime_helper.py  download.py  extra.py  fedresurs.py  location.py  logger.py  url.py
(+291 files in other folders)
