[project]
name = "etp-parsing"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.7",
    "aiohttp-retry>=2.9.1",
    "aiohttp-socks>=0.10.1",
    "alembic>=1.16.1",
    "asyncmy>=0.2.10",
    "beautifulsoup4>=4.13.4",
    "chardet>=5.2.0",
    "loguru>=0.7.3",
    "mysql-connector-python>=9.3.0",
    "natasha>=1.6.0",
    "pandas>=2.2.3",
    "patchright>=1.51.3",
    "playwright==1.51.0",
    "py7zr>=1.0.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pymorphy3>=2.0.3",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "rarfile>=4.2",
    "requests-toolbelt>=1.0.0",
    "requests[socks]>=2.32.3",
    "scrapy==2.11.2",
    "scrapy-playwright==0.0.43",
    "scrapy-rotating-proxies>=0.6.2",
    "scrapy-splash>=0.11.1",
    "sqlalchemy[asyncio]>=2.0.41",
    "tqdm>=4.67.1",
    "xmltodict>=0.14.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]
